--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -1,38 +1,40 @@
-name: Auto Post Image to X
+name: Auto Tweet Every 2 Hours
 
 on:
   schedule:
-    - cron: "0 */2 * * *"   # Setiap 2 jam
-  workflow_dispatch:        # Bisa kamu jalankan manual untuk test
+    - cron: "0 */2 * * *"
+  workflow_dispatch:
 
 jobs:
-  post:
+  tweet:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          fetch-depth: 1
 
-      - name: Install Tweepy
-        run: pip install tweepy
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
 
-      - name: Post image
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run bot
         env:
           X_API_KEY: ${{ secrets.X_API_KEY }}
           X_API_SECRET: ${{ secrets.X_API_SECRET }}
           X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           X_ACCESS_SECRET: ${{ secrets.X_ACCESS_SECRET }}
-        run: python post_image.py
+        run: node index.js
 
-      - name: Commit updated state
+      - name: Save index
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add state.txt
-          git commit -m "update state" || echo "No changes"
-          git push
+          git config --local user.email "bot@github.com"
+          git config --local user.name "GitHub Bot"
+          git add current_index.json
+          git commit -m "update index" || echo "no changes"
+          git push || echo "no push"
