--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -1,8 +1,8 @@
-name: Auto Tweet Every 2 Hours
+name: Auto Tweet Images
 
 on:
   schedule:
-    - cron: "0 */2 * * *"
+    - cron: "0 */1 * * *"
   workflow_dispatch:
 
 jobs:
